# matrix

./: .gitignore  CMakeLists.txt  readme.md
.github/workflows/: ci.yaml
include/: matrix.hpp
tests/: CMakeLists.txt  matrix_tests.cpp
